plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.5.1'
    id 'checkstyle'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

checkstyle {
    toolVersion = '11.0.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

javafx {
    version = '25'
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

repositories {
    mavenCentral()
}

dependencies {
    String jUnitVersion = '5.14.4'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'

    implementation "org.openjfx:javafx-controls:25"
    implementation "org.openjfx:javafx-fxml:25"
    implementation "org.openjfx:javafx-media:25"
}

test {
    useJUnitPlatform()

    testLogging {
        events 'passed', 'skipped', 'failed'

        showExceptions = true
        exceptionFormat = 'full'
        showCauses = true
        showStackTraces = true
        showStandardStreams = false
    }
}

application {
    mainClass = 'skynet.Launcher'
}

jar {
    // A lean JAR file (i.e., without the dependencies packaged inside) is not needed.
    enabled = false
    // Rename its output anyway; Gradle forbids it clashing with the shadowJar output file, even for a disabled task.
    archiveClassifier = 'without-dependencies'
}

shadowJar {
    archiveFileName = 'skynet.jar'
}

run {
    standardInput = System.in
}
